11.x/kr/deployment.md
# 배포(Deployment)

- [소개](#introduction)
- [서버 요구 사항](#server-requirements)
- [서버 설정](#server-configuration)
    - [Nginx](#nginx)
    - [FrankenPHP](#frankenphp)
    - [디렉토리 권한](#directory-permissions)
- [최적화](#optimization)
    - [설정 캐싱](#optimizing-configuration-loading)
    - [이벤트 캐싱](#caching-events)
    - [라우트 캐싱](#optimizing-route-loading)
    - [뷰 캐싱](#optimizing-view-loading)
- [디버그 모드](#debug-mode)
- [헬스 체크 라우트](#the-health-route)
- [Forge / Vapor를 사용한 간편한 배포](#deploying-with-forge-or-vapor)

<a name="introduction"></a>
## 소개

Laravel 애플리케이션을 프로덕션 환경에 배포할 준비가 되었다면, 애플리케이션이 가능한 한 효율적으로 실행되도록 하기 위해 할 수 있는 몇 가지 중요한 작업이 있습니다. 이 문서에서는 Laravel 애플리케이션이 올바르게 배포되었는지 확인하기 위한 좋은 출발점을 다룹니다.

<a name="server-requirements"></a>
## 서버 요구 사항

Laravel 프레임워크에는 몇 가지 시스템 요구 사항이 있습니다. 웹 서버가 다음의 최소 PHP 버전과 확장 기능을 갖추고 있는지 확인해야 합니다.

<div class="content-list" markdown="1">

- PHP >= 8.2
- Ctype PHP Extension
- cURL PHP Extension
- DOM PHP Extension
- Fileinfo PHP Extension
- Filter PHP Extension
- Hash PHP Extension
- Mbstring PHP Extension
- OpenSSL PHP Extension
- PCRE PHP Extension
- PDO PHP Extension
- Session PHP Extension
- Tokenizer PHP Extension
- XML PHP Extension

</div>

<a name="server-configuration"></a>
## 서버 설정

<a name="nginx"></a>
### Nginx

Nginx가 실행되는 서버에 애플리케이션을 배포하는 경우, 다음 설정 파일을 웹 서버 구성의 시작점으로 사용할 수 있습니다. 대부분의 경우 이 파일은 서버 설정에 따라 커스터마이징이 필요할 것입니다. **서버 관리에 도움이 필요하다면, [Laravel Forge](https://forge.laravel.com)와 같은 자사(first-party) Laravel 서버 관리 및 배포 서비스 사용을 고려해 보세요.**

아래 설정처럼 웹 서버가 모든 요청을 애플리케이션의 `public/index.php` 파일로 전달하도록 해야 합니다. `index.php` 파일을 프로젝트 루트로 옮기려고 시도해서는 안 됩니다. 프로젝트 루트에서 애플리케이션을 제공하면 많은 민감한 설정 파일이 공개 인터넷에 노출될 수 있기 때문입니다.

```nginx
server {
    listen 80;
    listen [::]:80;
    server_name example.com;
    root /srv/example.com/public;

    add_header X-Frame-Options "SAMEORIGIN";
    add_header X-Content-Type-Options "nosniff";

    index index.php;

    charset utf-8;

    location / {
        try_files $uri $uri/ /index.php?$query_string;
    }

    location = /favicon.ico { access_log off; log_not_found off; }
    location = /robots.txt  { access_log off; log_not_found off; }

    error_page 404 /index.php;

    location ~ ^/index\.php(/|$) {
        fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
        include fastcgi_params;
        fastcgi_hide_header X-Powered-By;
    }

    location ~ /\.(?!well-known).* {
        deny all;
    }
}
```

<a name="frankenphp"></a>
### FrankenPHP

[FrankenPHP](https://frankenphp.dev/)도 Laravel 애플리케이션을 제공하는 데 사용할 수 있습니다. FrankenPHP는 Go로 작성된 현대적인 PHP 애플리케이션 서버입니다. FrankenPHP를 사용하여 Laravel PHP 애플리케이션을 제공하려면, 간단히 `php-server` 명령을 실행하면 됩니다.

```shell
frankenphp php-server -r public/
```

[Laravel Octane](/docs/{{version}}/octane) 통합, HTTP/3, 최신 압축 기술, 또는 Laravel 애플리케이션을 독립 실행형 바이너리로 패키징하는 기능과 같은 FrankenPHP가 지원하는 더 강력한 기능을 활용하려면, FrankenPHP의 [Laravel 문서](https://frankenphp.dev/docs/laravel/)를 참조하세요.

<a name="directory-permissions"></a>
### 디렉토리 권한

Laravel은 `bootstrap/cache`와 `storage` 디렉토리에 쓰기 작업이 필요하므로, 웹 서버 프로세스 소유자가 이러한 디렉토리에 쓰기 권한을 가지고 있는지 확인해야 합니다.

<a name="optimization"></a>
## 최적화

애플리케이션을 프로덕션에 배포할 때, 설정, 이벤트, 라우트, 뷰를 포함한 다양한 파일들을 캐싱해야 합니다. Laravel은 이러한 모든 파일을 캐싱하는 편리한 단일 `optimize` Artisan 명령을 제공합니다. 이 명령은 일반적으로 애플리케이션 배포 프로세스의 일부로 실행되어야 합니다.

```shell
php artisan optimize
```

`optimize:clear` 메서드는 `optimize` 명령으로 생성된 모든 캐시 파일과 기본 캐시 드라이버의 모든 키를 제거하는 데 사용할 수 있습니다.

```shell
php artisan optimize:clear
```

다음 문서에서는 `optimize` 명령에 의해 실행되는 각각의 세부 최적화 명령에 대해 설명합니다.

<a name="optimizing-configuration-loading"></a>
### 설정 캐싱

애플리케이션을 프로덕션에 배포할 때, 배포 프로세스 중에 `config:cache` Artisan 명령을 실행해야 합니다.

```shell
php artisan config:cache
```

이 명령은 Laravel의 모든 설정 파일을 단일 캐시 파일로 결합하여, 프레임워크가 설정 값을 로드할 때 파일 시스템에 접근해야 하는 횟수를 크게 줄여줍니다.

> [!WARNING]  
> 배포 프로세스 중에 `config:cache` 명령을 실행하는 경우, 설정 파일 내에서만 `env` 함수를 호출하고 있는지 확인해야 합니다. 설정이 캐싱되면 `.env` 파일이 로드되지 않으며, `.env` 변수에 대한 모든 `env` 함수 호출은 `null`을 반환합니다.

<a name="caching-events"></a>
### 이벤트 캐싱

배포 프로세스 중에 애플리케이션의 자동 검색된 이벤트-리스너 매핑을 캐싱해야 합니다. 배포 중에 `event:cache` Artisan 명령을 실행하여 이를 수행할 수 있습니다.

```shell
php artisan event:cache
```

<a name="optimizing-route-loading"></a>
### 라우트 캐싱

많은 라우트가 있는 대규모 애플리케이션을 구축하는 경우, 배포 프로세스 중에 `route:cache` Artisan 명령을 실행해야 합니다.

```shell
php artisan route:cache
```

이 명령은 모든 라우트 등록을 캐시 파일 내의 단일 메서드 호출로 축소하여, 수백 개의 라우트를 등록할 때 라우트 등록 성능을 향상시킵니다.

<a name="optimizing-view-loading"></a>
### 뷰 캐싱

애플리케이션을 프로덕션에 배포할 때, 배포 프로세스 중에 `view:cache` Artisan 명령을 실행해야 합니다.

```shell
php artisan view:cache
```

이 명령은 모든 Blade 뷰를 미리 컴파일하여 요청 시 컴파일되지 않도록 하며, 뷰를 반환하는 각 요청의 성능을 향상시킵니다.

<a name="debug-mode"></a>
## 디버그 모드

`config/app.php` 설정 파일의 debug 옵션은 오류에 대한 정보가 사용자에게 실제로 얼마나 표시되는지를 결정합니다. 기본적으로 이 옵션은 애플리케이션의 `.env` 파일에 저장된 `APP_DEBUG` 환경 변수의 값을 따르도록 설정되어 있습니다.

> [!WARNING]  
> **프로덕션 환경에서 이 값은 항상 `false`여야 합니다. 프로덕션에서 `APP_DEBUG` 변수가 `true`로 설정되어 있으면, 민감한 설정 값이 애플리케이션의 최종 사용자에게 노출될 위험이 있습니다.**

<a name="the-health-route"></a>
## 헬스 체크 라우트

Laravel에는 애플리케이션의 상태를 모니터링하는 데 사용할 수 있는 내장 헬스 체크 라우트가 포함되어 있습니다. 프로덕션 환경에서 이 라우트는 업타임 모니터, 로드 밸런서, 또는 Kubernetes와 같은 오케스트레이션 시스템에 애플리케이션의 상태를 보고하는 데 사용할 수 있습니다.

기본적으로 헬스 체크 라우트는 `/up`에서 제공되며, 애플리케이션이 예외 없이 부팅되면 200 HTTP 응답을 반환합니다. 그렇지 않으면 500 HTTP 응답이 반환됩니다. 애플리케이션의 `bootstrap/app` 파일에서 이 라우트의 URI를 설정할 수 있습니다.

    ->withRouting(
        web: __DIR__.'/../routes/web.php',
        commands: __DIR__.'/../routes/console.php',
        health: '/up', // [tl! remove]
        health: '/status', // [tl! add]
    )

이 라우트에 HTTP 요청이 이루어지면, Laravel은 `Illuminate\Foundation\Events\DiagnosingHealth` 이벤트도 발송하여 애플리케이션과 관련된 추가 헬스 체크를 수행할 수 있게 합니다. 이 이벤트의 [리스너](/docs/{{version}}/events) 내에서 애플리케이션의 데이터베이스 또는 캐시 상태를 확인할 수 있습니다. 애플리케이션에서 문제를 감지하면, 리스너에서 간단히 예외를 throw하면 됩니다.

<a name="deploying-with-forge-or-vapor"></a>
## Forge / Vapor를 사용한 간편한 배포

<a name="laravel-forge"></a>
#### Laravel Forge

자체 서버 설정을 관리할 준비가 되지 않았거나 견고한 Laravel 애플리케이션을 실행하는 데 필요한 다양한 서비스를 구성하는 것이 불편하다면, [Laravel Forge](https://forge.laravel.com)는 훌륭한 대안입니다.

Laravel Forge는 DigitalOcean, Linode, AWS 등 다양한 인프라 제공업체에서 서버를 생성할 수 있습니다. 또한 Forge는 Nginx, MySQL, Redis, Memcached, Beanstalk 등 견고한 Laravel 애플리케이션을 구축하는 데 필요한 모든 도구를 설치하고 관리합니다.

> [!NOTE]  
> Laravel Forge를 사용하여 배포하는 전체 가이드를 원하시나요? [Laravel Bootcamp](https://bootcamp.laravel.com/deploying)과 Laracasts에서 제공하는 Forge [비디오 시리즈](https://laracasts.com/series/learn-laravel-forge-2022-edition)를 확인해 보세요.

<a name="laravel-vapor"></a>
#### Laravel Vapor

Laravel에 최적화된 완전 서버리스, 자동 확장 배포 플랫폼을 원한다면, [Laravel Vapor](https://vapor.laravel.com)를 확인해 보세요. Laravel Vapor는 AWS 기반의 Laravel용 서버리스 배포 플랫폼입니다. Vapor에서 Laravel 인프라를 시작하고 서버리스의 확장 가능한 단순함에 빠져보세요. Laravel Vapor는 Laravel 창시자들에 의해 프레임워크와 원활하게 작동하도록 최적화되어 있어, 익숙한 방식 그대로 Laravel 애플리케이션을 계속 작성할 수 있습니다.
